tup/parse/testdata/error/review/nested_errors.tup
# binary expression missing operand in function body
add = fn(x: Int, y: Int) Int { x + }

/home/user/tuppence/tup/parse/testdata/error/input/nested_errors.tup:1:36: error: expecting "expression", got "}"

# binary expression missing operand in block expression
result = {
    x = 1
    y = 2
    x +
}

/home/user/tuppence/tup/parse/testdata/error/input/nested_errors.tup:5:1: error: expecting "expression", got "}"

# binary expression missing operand in function call argument
_ = foo(1 + )

/home/user/tuppence/tup/parse/testdata/error/input/nested_errors.tup:1:13: error: expecting "expression", got ")"

# nested call missing closing paren
_ = outer(inner(1, 2)

/home/user/tuppence/tup/parse/testdata/error/input/nested_errors.tup:1:22: error: expecting ")", got ""

# binary expression missing operand in array initializer closure
_ = [4]Int { |i| i * }

/home/user/tuppence/tup/parse/testdata/error/input/nested_errors.tup:1:22: error: expecting "expression", got "}"

# if expression missing then branch inside function body
check = fn(x: Int) Bool { if x > 0 }

/home/user/tuppence/tup/parse/testdata/error/input/nested_errors.tup:1:36: error: expecting "block", got "}"
